<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white_ffffff">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no">

            <ImageView
                android:id="@+id/iv_registration_logo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:importantForAccessibility="no"
                android:src="@drawable/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/edt_registration_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_registration_logo"
                tools:visibility="visible"/>

            <EditText
                android:id="@+id/edt_registration_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="128dp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:hint="@string/registration_name_hint"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_registration_logo"/>

            <EditText
                android:id="@+id/edt_registration_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:hint="@string/auth_email_hint"
                app:layout_constraintEnd_toEndOf="@+id/edt_registration_name"
                app:layout_constraintStart_toStartOf="@+id/edt_registration_name"
                app:layout_constraintTop_toBottomOf="@+id/edt_registration_name"/>

            <EditText
                android:id="@+id/edt_registration_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:hint="@string/auth_password_hint"
                app:layout_constraintEnd_toEndOf="@+id/edt_registration_name"
                app:layout_constraintStart_toStartOf="@+id/edt_registration_name"
                app:layout_constraintTop_toBottomOf="@+id/edt_registration_email"/>

            <Button
                android:id="@+id/btn_registration_continue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/buttons_background"
                android:text="@string/registration_create_account"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="@+id/edt_registration_name"
                app:layout_constraintStart_toStartOf="@+id/edt_registration_name"
                app:layout_constraintTop_toBottomOf="@+id/edt_registration_password" />

            <Button
                android:id="@+id/btn_registration_login_instead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="16dp"
                android:background="@android:color/transparent"
                android:text="@string/registration_signin_instead"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/edt_registration_name"
                app:layout_constraintStart_toStartOf="@+id/edt_registration_name"
                app:layout_constraintTop_toBottomOf="@+id/btn_registration_continue" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>